@@ -1,3 +1,9 @@
+2019-11-09 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCClospre.cc,
+	  support/regression/tests/bug-2942.c:
+	  Fix bug #2942.
+
 2019-11-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* support/regression/ports/pdk15-stack-auto/spec.mk:
